@@ -180,7 +180,7 @@ function forced_title_callback() {
 		///////////////////////////////////////////
 		$('#forced_title_layer').css('left', 0);
 		$('#forced_title_layer').css('top', 0);
-
+		
 		///////////////////////////////////////////
 		// Get info of the image
 		///////////////////////////////////////////
@@ -190,44 +190,44 @@ function forced_title_callback() {
 		var img_height = $(this).height();
 		var img_id = $(this).attr('id');
 		var img_left_mid = $(this).offset().left + (img_width / 2);
-
+		
 		///////////////////////////////////////////
 		// Put title in the layer
 		///////////////////////////////////////////
 		
 		var title = $('#forced_title_'+img_id).html();
 		$('#forced_title_layer').html(title);
-
-		///////////////////////////////////////////		
+		
+		///////////////////////////////////////////
 		// Get info of the layer
 		///////////////////////////////////////////
-
+		
 		var layer_width = $('#forced_title_layer').width();
 		var layer_height = $('#forced_title_layer').height();
 		
 		///////////////////////////////////////////
 		// Obtain the new position of the layer
 		///////////////////////////////////////////
-
+		
 		// Jquery doesnt know the padding of the layer
 		var layer_padding = 4;
 		
 		// Deduct padding of both sides
 		var layer_top = img_top - layer_height - (layer_padding * 2) - 5;
-		if(layer_top < 0) {
+		if (layer_top < 0) {
 			layer_top = img_top + img_height + (layer_padding * 2);
 		}
 		
 		// Deduct padding of one side
 		var layer_left = img_left_mid - (layer_width / 2) - layer_padding;
-		if(layer_left < 0) {
+		if (layer_left < 0) {
 			layer_left = 0;
 		}
 		
 		var real_layer_width = layer_width + (layer_padding * 2) + 5;
 		var layer_right = layer_left + real_layer_width;
 		var screen_width = $(window).width();
-		if(screen_width < layer_right) {
+		if (screen_width < layer_right) {
 			layer_left = screen_width - real_layer_width;
 		}
 		
